// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiMarkdownEditor custom plugins are excluded and popover is rendered 1`] = `
<div
  class="euiMarkdownEditor testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiMarkdownEditorToolbar"
    data-test-subj="euiMarkdownEditorToolbar"
  >
    <div
      class="euiMarkdownEditorToolbar__buttons"
    >
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Bold"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorBold"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Italic"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorItalic"
          />
        </button>
      </span>
      <span
        class="euiMarkdownEditorToolbar__divider"
      />
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Unordered list"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorUnorderedList"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Ordered list"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorOrderedList"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Task list"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorChecklist"
          />
        </button>
      </span>
      <span
        class="euiMarkdownEditorToolbar__divider"
      />
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Quote"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="quote"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Code"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorCodeBlock"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Link"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorLink"
          />
        </button>
      </span>
    </div>
    <button
      class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text"
      data-test-subj="markdown_editor_preview_button"
      type="button"
    >
      <span
        class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
      >
        <span
          color="inherit"
          data-euiicon-type="eye"
        />
        <span
          class="eui-textTruncate euiButtonEmpty__text"
        >
          Preview
        </span>
      </span>
    </button>
  </div>
  <div
    class="euiMarkdownEditor__toggleContainer"
  >
    <div
      class="euiMarkdownEditorDropZone"
      role="button"
    >
      <textarea
        aria-label="aria-label"
        class="euiMarkdownEditorTextArea"
        data-test-subj="euiMarkdownEditorTextArea"
        id="editorId"
        rows="6"
        style="max-height: 500px;"
      />
      <div
        class="euiMarkdownEditorFooter"
      >
        <div
          class="euiMarkdownEditorFooter__actions"
        />
        <div
          class="euiPopover emotion-euiPopover"
        >
          <div
            class="euiPopover__anchor css-16vtueo-render"
          >
            <button
              aria-label="Show markdown help"
              class="euiButtonIcon euiMarkdownEditorFooter__helpButton emotion-euiButtonIcon-s-empty-text"
              title="Syntax help"
              type="button"
            >
              <span
                aria-hidden="true"
                class="euiButtonIcon__icon"
                color="inherit"
                data-euiicon-type="MarkdownLogo"
              />
            </button>
          </div>
        </div>
      </div>
      <input
        autocomplete="off"
        multiple=""
        style="display: none;"
        tabindex="-1"
        type="file"
      />
    </div>
  </div>
</div>
`;

exports[`EuiMarkdownEditor is rendered 1`] = `
<div
  class="euiMarkdownEditor testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiMarkdownEditorToolbar"
    data-test-subj="euiMarkdownEditorToolbar"
  >
    <div
      class="euiMarkdownEditorToolbar__buttons"
    >
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Bold"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorBold"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Italic"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorItalic"
          />
        </button>
      </span>
      <span
        class="euiMarkdownEditorToolbar__divider"
      />
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Unordered list"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorUnorderedList"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Ordered list"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorOrderedList"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Task list"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorChecklist"
          />
        </button>
      </span>
      <span
        class="euiMarkdownEditorToolbar__divider"
      />
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Quote"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="quote"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Code"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorCodeBlock"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Link"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorLink"
          />
        </button>
      </span>
      <span
        class="euiMarkdownEditorToolbar__divider"
      />
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Tooltip"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorComment"
          />
        </button>
      </span>
    </div>
    <button
      class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text"
      data-test-subj="markdown_editor_preview_button"
      type="button"
    >
      <span
        class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
      >
        <span
          color="inherit"
          data-euiicon-type="eye"
        />
        <span
          class="eui-textTruncate euiButtonEmpty__text"
        >
          Preview
        </span>
      </span>
    </button>
  </div>
  <div
    class="euiMarkdownEditor__toggleContainer"
  >
    <div
      class="euiMarkdownEditorDropZone"
      role="button"
    >
      <textarea
        aria-label="aria-label"
        class="euiMarkdownEditorTextArea"
        data-test-subj="euiMarkdownEditorTextArea"
        id="editorId"
        placeholder="placeholder"
        rows="6"
        style="max-height: 500px;"
      />
      <div
        class="euiMarkdownEditorFooter"
      >
        <div
          class="euiMarkdownEditorFooter__actions"
        />
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            aria-label="Show markdown help"
            class="euiButtonIcon euiMarkdownEditorFooter__helpButton emotion-euiButtonIcon-s-empty-text"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="MarkdownLogo"
            />
          </button>
        </span>
      </div>
      <input
        autocomplete="off"
        multiple=""
        style="display: none;"
        tabindex="-1"
        type="file"
      />
    </div>
  </div>
</div>
`;

exports[`EuiMarkdownEditor props autoExpandPreview is rendered with false 1`] = `
<div
  class="euiMarkdownEditor testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiMarkdownEditorToolbar"
    data-test-subj="euiMarkdownEditorToolbar"
  >
    <div
      class="euiMarkdownEditorToolbar__buttons"
    >
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Bold"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorBold"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Italic"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorItalic"
          />
        </button>
      </span>
      <span
        class="euiMarkdownEditorToolbar__divider"
      />
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Unordered list"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorUnorderedList"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Ordered list"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorOrderedList"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Task list"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorChecklist"
          />
        </button>
      </span>
      <span
        class="euiMarkdownEditorToolbar__divider"
      />
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Quote"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="quote"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Code"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorCodeBlock"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Link"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorLink"
          />
        </button>
      </span>
      <span
        class="euiMarkdownEditorToolbar__divider"
      />
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Tooltip"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorComment"
          />
        </button>
      </span>
    </div>
    <button
      class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text"
      data-test-subj="markdown_editor_preview_button"
      type="button"
    >
      <span
        class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
      >
        <span
          color="inherit"
          data-euiicon-type="eye"
        />
        <span
          class="eui-textTruncate euiButtonEmpty__text"
        >
          Preview
        </span>
      </span>
    </button>
  </div>
  <div
    class="euiMarkdownEditor__toggleContainer"
  >
    <div
      class="euiMarkdownEditorDropZone"
      role="button"
    >
      <textarea
        aria-label="aria-label"
        class="euiMarkdownEditorTextArea"
        data-test-subj="euiMarkdownEditorTextArea"
        id="editorId"
        rows="6"
        style="max-height: 500px;"
      />
      <div
        class="euiMarkdownEditorFooter"
      >
        <div
          class="euiMarkdownEditorFooter__actions"
        />
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            aria-label="Show markdown help"
            class="euiButtonIcon euiMarkdownEditorFooter__helpButton emotion-euiButtonIcon-s-empty-text"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="MarkdownLogo"
            />
          </button>
        </span>
      </div>
      <input
        autocomplete="off"
        multiple=""
        style="display: none;"
        tabindex="-1"
        type="file"
      />
    </div>
  </div>
</div>
`;

exports[`EuiMarkdownEditor props height is rendered in full mode 1`] = `
<div
  class="euiMarkdownEditor euiMarkdownEditor--fullHeight testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiMarkdownEditorToolbar"
    data-test-subj="euiMarkdownEditorToolbar"
  >
    <div
      class="euiMarkdownEditorToolbar__buttons"
    >
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Bold"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorBold"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Italic"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorItalic"
          />
        </button>
      </span>
      <span
        class="euiMarkdownEditorToolbar__divider"
      />
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Unordered list"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorUnorderedList"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Ordered list"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorOrderedList"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Task list"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorChecklist"
          />
        </button>
      </span>
      <span
        class="euiMarkdownEditorToolbar__divider"
      />
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Quote"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="quote"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Code"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorCodeBlock"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Link"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorLink"
          />
        </button>
      </span>
      <span
        class="euiMarkdownEditorToolbar__divider"
      />
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Tooltip"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorComment"
          />
        </button>
      </span>
    </div>
    <button
      class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text"
      data-test-subj="markdown_editor_preview_button"
      type="button"
    >
      <span
        class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
      >
        <span
          color="inherit"
          data-euiicon-type="eye"
        />
        <span
          class="eui-textTruncate euiButtonEmpty__text"
        >
          Preview
        </span>
      </span>
    </button>
  </div>
  <div
    class="euiMarkdownEditor__toggleContainer"
  >
    <div
      class="euiMarkdownEditorDropZone"
      role="button"
    >
      <textarea
        aria-label="aria-label"
        class="euiMarkdownEditorTextArea"
        data-test-subj="euiMarkdownEditorTextArea"
        id="editorId"
        rows="6"
        style="height: 100%;"
      />
      <div
        class="euiMarkdownEditorFooter"
      >
        <div
          class="euiMarkdownEditorFooter__actions"
        />
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            aria-label="Show markdown help"
            class="euiButtonIcon euiMarkdownEditorFooter__helpButton emotion-euiButtonIcon-s-empty-text"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="MarkdownLogo"
            />
          </button>
        </span>
      </div>
      <input
        autocomplete="off"
        multiple=""
        style="display: none;"
        tabindex="-1"
        type="file"
      />
    </div>
  </div>
</div>
`;

exports[`EuiMarkdownEditor props height is rendered with a custom size 1`] = `
<div
  class="euiMarkdownEditor testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiMarkdownEditorToolbar"
    data-test-subj="euiMarkdownEditorToolbar"
  >
    <div
      class="euiMarkdownEditorToolbar__buttons"
    >
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Bold"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorBold"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Italic"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorItalic"
          />
        </button>
      </span>
      <span
        class="euiMarkdownEditorToolbar__divider"
      />
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Unordered list"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorUnorderedList"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Ordered list"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorOrderedList"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Task list"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorChecklist"
          />
        </button>
      </span>
      <span
        class="euiMarkdownEditorToolbar__divider"
      />
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Quote"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="quote"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Code"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorCodeBlock"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Link"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorLink"
          />
        </button>
      </span>
      <span
        class="euiMarkdownEditorToolbar__divider"
      />
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Tooltip"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorComment"
          />
        </button>
      </span>
    </div>
    <button
      class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text"
      data-test-subj="markdown_editor_preview_button"
      type="button"
    >
      <span
        class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
      >
        <span
          color="inherit"
          data-euiicon-type="eye"
        />
        <span
          class="eui-textTruncate euiButtonEmpty__text"
        >
          Preview
        </span>
      </span>
    </button>
  </div>
  <div
    class="euiMarkdownEditor__toggleContainer"
  >
    <div
      class="euiMarkdownEditorDropZone"
      role="button"
    >
      <textarea
        aria-label="aria-label"
        class="euiMarkdownEditorTextArea"
        data-test-subj="euiMarkdownEditorTextArea"
        id="editorId"
        rows="6"
        style="max-height: 500px;"
      />
      <div
        class="euiMarkdownEditorFooter"
      >
        <div
          class="euiMarkdownEditorFooter__actions"
        />
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            aria-label="Show markdown help"
            class="euiButtonIcon euiMarkdownEditorFooter__helpButton emotion-euiButtonIcon-s-empty-text"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="MarkdownLogo"
            />
          </button>
        </span>
      </div>
      <input
        autocomplete="off"
        multiple=""
        style="display: none;"
        tabindex="-1"
        type="file"
      />
    </div>
  </div>
</div>
`;

exports[`EuiMarkdownEditor props maxHeight is rendered with a custom size 1`] = `
<div
  class="euiMarkdownEditor testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiMarkdownEditorToolbar"
    data-test-subj="euiMarkdownEditorToolbar"
  >
    <div
      class="euiMarkdownEditorToolbar__buttons"
    >
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Bold"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorBold"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Italic"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorItalic"
          />
        </button>
      </span>
      <span
        class="euiMarkdownEditorToolbar__divider"
      />
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Unordered list"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorUnorderedList"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Ordered list"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorOrderedList"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Task list"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorChecklist"
          />
        </button>
      </span>
      <span
        class="euiMarkdownEditorToolbar__divider"
      />
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Quote"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="quote"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Code"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorCodeBlock"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Link"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorLink"
          />
        </button>
      </span>
      <span
        class="euiMarkdownEditorToolbar__divider"
      />
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Tooltip"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-text"
          data-test-subj="euiMarkdownEditorToolbarButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorComment"
          />
        </button>
      </span>
    </div>
    <button
      class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-text"
      data-test-subj="markdown_editor_preview_button"
      type="button"
    >
      <span
        class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
      >
        <span
          color="inherit"
          data-euiicon-type="eye"
        />
        <span
          class="eui-textTruncate euiButtonEmpty__text"
        >
          Preview
        </span>
      </span>
    </button>
  </div>
  <div
    class="euiMarkdownEditor__toggleContainer"
  >
    <div
      class="euiMarkdownEditorDropZone"
      role="button"
    >
      <textarea
        aria-label="aria-label"
        class="euiMarkdownEditorTextArea"
        data-test-subj="euiMarkdownEditorTextArea"
        id="editorId"
        rows="6"
        style="max-height: 600px;"
      />
      <div
        class="euiMarkdownEditorFooter"
      >
        <div
          class="euiMarkdownEditorFooter__actions"
        />
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            aria-label="Show markdown help"
            class="euiButtonIcon euiMarkdownEditorFooter__helpButton emotion-euiButtonIcon-s-empty-text"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="MarkdownLogo"
            />
          </button>
        </span>
      </div>
      <input
        autocomplete="off"
        multiple=""
        style="display: none;"
        tabindex="-1"
        type="file"
      />
    </div>
  </div>
</div>
`;

exports[`EuiMarkdownEditor props readOnly is set to true 1`] = `
<div
  class="euiMarkdownEditor testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiMarkdownEditorToolbar"
    data-test-subj="euiMarkdownEditorToolbar"
  >
    <div
      class="euiMarkdownEditorToolbar__buttons"
    >
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Bold"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-disabled-isDisabled"
          data-test-subj="euiMarkdownEditorToolbarButton"
          disabled=""
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorBold"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Italic"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-disabled-isDisabled"
          data-test-subj="euiMarkdownEditorToolbarButton"
          disabled=""
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorItalic"
          />
        </button>
      </span>
      <span
        class="euiMarkdownEditorToolbar__divider"
      />
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Unordered list"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-disabled-isDisabled"
          data-test-subj="euiMarkdownEditorToolbarButton"
          disabled=""
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorUnorderedList"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Ordered list"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-disabled-isDisabled"
          data-test-subj="euiMarkdownEditorToolbarButton"
          disabled=""
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorOrderedList"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Task list"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-disabled-isDisabled"
          data-test-subj="euiMarkdownEditorToolbarButton"
          disabled=""
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorChecklist"
          />
        </button>
      </span>
      <span
        class="euiMarkdownEditorToolbar__divider"
      />
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Quote"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-disabled-isDisabled"
          data-test-subj="euiMarkdownEditorToolbarButton"
          disabled=""
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="quote"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Code"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-disabled-isDisabled"
          data-test-subj="euiMarkdownEditorToolbarButton"
          disabled=""
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorCodeBlock"
          />
        </button>
      </span>
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Link"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-disabled-isDisabled"
          data-test-subj="euiMarkdownEditorToolbarButton"
          disabled=""
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorLink"
          />
        </button>
      </span>
      <span
        class="euiMarkdownEditorToolbar__divider"
      />
      <span
        class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
      >
        <button
          aria-label="Tooltip"
          class="euiButtonIcon emotion-euiButtonIcon-xs-empty-disabled-isDisabled"
          data-test-subj="euiMarkdownEditorToolbarButton"
          disabled=""
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="editorComment"
          />
        </button>
      </span>
    </div>
    <button
      class="euiButtonEmpty emotion-euiButtonDisplay-euiButtonEmpty-s-empty-disabled-isDisabled"
      data-test-subj="markdown_editor_preview_button"
      disabled=""
      type="button"
    >
      <span
        class="euiButtonEmpty__content emotion-euiButtonDisplayContent"
      >
        <span
          color="inherit"
          data-euiicon-type="eye"
        />
        <span
          class="eui-textTruncate euiButtonEmpty__text"
        >
          Preview
        </span>
      </span>
    </button>
  </div>
  <div
    class="euiMarkdownEditor__toggleContainer"
  >
    <div
      class="euiMarkdownEditorDropZone"
      role="button"
    >
      <textarea
        aria-label="aria-label"
        class="euiMarkdownEditorTextArea euiMarkdownEditorTextArea-isReadOnly"
        data-test-subj="euiMarkdownEditorTextArea"
        id="editorId"
        readonly=""
        rows="6"
        style="max-height: 500px;"
      />
      <div
        class="euiMarkdownEditorFooter"
      >
        <div
          class="euiMarkdownEditorFooter__actions"
        />
        <span
          class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
        >
          <button
            aria-label="Show markdown help"
            class="euiButtonIcon euiMarkdownEditorFooter__helpButton emotion-euiButtonIcon-s-empty-disabled-isDisabled"
            disabled=""
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="MarkdownLogo"
            />
          </button>
        </span>
      </div>
      <input
        autocomplete="off"
        multiple=""
        style="display: none;"
        tabindex="-1"
        type="file"
      />
    </div>
  </div>
</div>
`;
